--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+node_modules
+build
+npm-debug.log
+.env
+.DS_Store
+
+
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
