--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,4 @@ next-env.d.ts
 
 .DS_Store
 subhashritgithub: what if i want to intr.md
-const userProvidedPassword .md
+meprawin404: const userProvidedPassword .md
